landing-page: fixed some layout bugs, added video

--- a/landing-page/styles/index.css
+++ b/landing-page/styles/index.css
@@ -38,6 +38,9 @@
 }
 
 html {
+  scroll-behavior: smooth;
+}
+html {
   font-size: 12px;
 }
 @media screen and (min-width: 300px) {
@@ -142,7 +145,7 @@ footer {
 
 main {
   display: grid;
-  grid-template-rows: repeat(9, auto);
+  grid-column: 1fr;
   background-color: transparent;
 }
 
@@ -220,7 +223,7 @@ main {
   }
   100% {
     top: 1rem;
-    right: 10.5rem;
+    right: 9.2rem;
     transform: rotateZ(180deg);
   }
 }
@@ -272,7 +275,8 @@ main {
     color: transparent;
     text-shadow: none;
     font-size: 2rem;
-    padding: 0.5rem 3rem 0.5rem 0.5rem;
+    padding: 0.4rem 2rem 0.4rem 0.4rem;
+    border-radius: 0.3rem;
     box-shadow: 0 0 1.2rem rgba(0, 0, 0, 0.4);
     background: url("../assets/icons/nokia-logo.jpg") center/cover no-repeat;
   }
@@ -284,15 +288,14 @@ main {
     background: white;
     padding: 1.2rem;
     z-index: 3;
-    border-top-left-radius: 0.8rem;
-    border-bottom-left-radius: 0.8rem;
+    border-radius: 0.8rem;
     box-shadow: 0 0 1.2rem rgba(0, 0, 0, 0.4);
   }
   .navigation__menu_show {
-    animation: fade-in 0.2s ease-in;
+    animation: fade-in 0.1s ease-in;
   }
   .navigation__menu_hide {
-    animation: fade-out 0.2s ease-in;
+    animation: fade-out 0.1s ease-in;
   }
   .navigation__menu_hidden {
     display: none;
@@ -307,7 +310,7 @@ main {
     padding: 0.2rem;
     color: black;
     text-shadow: none;
-    font-size: 1.4rem;
+    font-size: 1.2rem;
   }
   .navigation__action {
     display: block;
@@ -652,11 +655,38 @@ main {
   font-weight: 900;
 }
 
+.demo {
+  position: relative;
+  clip-path: polygon(0 0, 100% 5rem, 100% 100%, 0 30rem);
+  height: 35rem;
+  background: black;
+  margin-top: -5rem;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.demo video {
+  height: 100%;
+  opacity: 0.5;
+}
+@media screen and (max-width: 535px) {
+  .demo {
+    height: 28rem;
+  }
+}
+@media screen and (max-width: 423px) {
+  .demo {
+    height: 26rem;
+  }
+}
+
 .promotion {
   clip-path: polygon(0 0, 100% 5rem, 100% 35rem, 0 40rem);
   width: 100%;
   height: 40rem;
-  background: linear-gradient(45deg, white, rgba(255, 255, 255, 0.7)), url("../assets/images/assorted.jpg") center/cover no-repeat;
+  background: linear-gradient(45deg, #333, rgba(255, 255, 255, 0.9)), url("../assets/images/assorted.jpg") center/cover no-repeat;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -669,7 +699,7 @@ main {
   font-family: "Xolonium";
   font-size: 4rem;
   color: transparent;
-  background-image: linear-gradient(to right, #ff0066, black, orange);
+  background-image: linear-gradient(to right, #ff0066, black);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-stroke: 0.1rem rgba(0, 0, 0, 0.1);
@@ -679,7 +709,7 @@ main {
   text-transform: uppercase;
   font-weight: 900;
   font-size: 1.4rem;
-  text-shadow: 0.1rem 0.1rem rgba(128, 128, 128, 0.3);
+  text-shadow: 0 0 0.4rem rgba(255, 255, 255, 0.7);
   margin-bottom: 1rem;
   letter-spacing: 0.1rem;
   text-align: center;
@@ -689,11 +719,12 @@ main {
   font-size: 0.9rem;
   padding: 0.4rem;
   border-radius: 4rem;
-  font-family: "Atmospheric";
-  box-shadow: 0.1rem 0.1rem 0.4rem rgba(0, 0, 0, 0.4);
+  font-family: "Cairo";
+  font-weight: 900;
+  box-shadow: 0.1rem 0.1rem 0.3rem rgba(0, 0, 0, 0.4);
   width: 13rem;
-  background-image: linear-gradient(to left, #ff0066, #ffff00, #00ff00, #0066ff);
-  text-shadow: 0 0 0.4rem white;
+  background-image: linear-gradient(45deg, #ff0066, #0066ff);
+  color: #eee;
 }
 .promotion__action:active {
   transform: translateY(0.1rem);
@@ -701,23 +732,29 @@ main {
 }
 
 .testimonials {
-  position: relative;
   width: 100%;
   padding-top: 5rem;
   background: #222;
   display: grid;
-  grid-template-rows: 5rem 32rem;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto 32rem;
   align-items: center;
-  overflow-x: hidden;
   background: linear-gradient(45deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6)), url("../assets/images/galaxy.jpeg") center/cover no-repeat;
 }
-.testimonials__list {
-  display: inline-flex;
+.testimonials > div {
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+  display: flex;
+  align-items: center;
   grid-row: 2/-1;
+}
+.testimonials__list {
+  display: flex;
 }
 .testimonials__batch {
   color: white;
-  display: inline-flex;
+  display: flex;
 }
 .testimonials__item {
   color: rgba(0, 0, 0, 0.8);
@@ -736,11 +773,12 @@ main {
   margin-top: 4rem;
 }
 .testimonials__heading {
+  display: inline;
   font-family: "Atmospheric";
-  color: white;
-  text-shadow: 0.15rem 0.15rem rgba(255, 255, 255, 0.4);
+  color: #eee;
   font-size: 2rem;
   margin: 1rem;
+  text-align: right;
 }
 
 .testimony {
