--- a/landing-page/styles/src/components/_navigation.scss
+++ b/landing-page/styles/src/components/_navigation.scss
@@ -82,7 +82,7 @@
   }
   100% {
     top: 1rem;
-    right: 10.5rem;
+    right: 9.2rem;
     transform: rotateZ(180deg);
   }
 }
